# taitan-orm

./: .gitignore  Cargo.toml  README.md  flake.nix  git_stat.sh  table_spec.test.def
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: insert_bench.rs  insert_by_rbatis.rs  insert_by_seaorm.rs  insert_by_sqlx.rs  insert_by_taitan.rs  sea_insert_bench.rs  select_by_rbatis.rs  select_by_seaorm.rs  select_by_sqlx.rs  select_by_taitan.rs
examples/axum_crud/: Cargo.toml  README.md
examples/axum_crud/src/: main.rs  state.rs
examples/crud/: Cargo.toml
examples/crud/src/: main.rs
examples/crud/workspace/: test.db  test.db-shm  test.db-wal
examples/search/: Cargo.toml
examples/search/src/: main.rs
examples/template/: Cargo.toml
examples/template/src/: main.rs
examples/template/workspace/: test.db  test.db-shm  test.db-wal
taitan-orm/: Cargo.toml  DESIGN.md  README.md  ROADMAP.md  table_spec.test.def
taitan-orm-macro/: Cargo.toml  Design.md  README.md  Roadmap.md
taitan-orm-macro/src/: db_type.rs  lib.rs  location.rs  schema.rs  selected.rs
taitan-orm-macro/src/_old/: db_type.rs
taitan-orm-macro/src/attrs/: attr_parser.rs
taitan-orm-macro/src/brave_new/: field_def.rs  mod.rs  table_def.rs
taitan-orm-macro/src/expands/: entity_expander.rs  location_expander.rs  location_expr_expander.rs  mod.rs  mutation_expander.rs  ordering_expander.rs  selected_expander.rs  selection_expander.rs  template_expander.rs  unique_expander.rs
taitan-orm-macro/src/fields/: entity_parser.rs  field_mapper.rs  fields_filter.rs  mod.rs  parser.rs  unique_parser.rs
taitan-orm-macro/src/types/: checker.rs
taitan-orm-macro/src/util/: copy_struct.rs  mod.rs  utils.rs
taitan-orm-macro/tests/: mod.rs
taitan-orm-macro/tests/entities/: entity_spec_001.rs  mod.rs
taitan-orm-macro/tests/locations/: location_spec_001.rs  location_spec_002.rs  location_spec_003.rs  location_spec_004.rs  location_spec_005.rs  mod.rs
taitan-orm-macro/tests/mutations/: mod.rs  mutation_spec_001.rs  mutation_spec_002.rs  mutation_spec_003.rs
taitan-orm-macro/tests/params/: entity_spec_001.rs  location_spec_001.rs  mod.rs  param_spec_001.rs  param_spec_002.rs
taitan-orm-macro/tests/schemas/: mod.rs  schema_spec_001.rs
taitan-orm-macro/tests/selected/: selected_spec_001.rs
taitan-orm-parser/: Cargo.toml  README.md
taitan-orm-parser/src/: args_generator.rs  condition_def.rs  db_type.rs  field_def.rs  lib.rs  sql_generator.rs  sql_type.rs  table_def.rs
taitan-orm-parser/src/field_mapper/: connector.rs  field_mapper.rs  field_wrapper.rs  mark_mapper.rs  mod.rs  multi_field_mapper.rs  name_mapper.rs  set_mapper.rs  single_field_mapper.rs
taitan-orm-parser/src/impl_generator/: entity_generator.rs  entity_trait_impl_generator.rs  location_trait_impl_generator.rs  mod.rs  mutation_trait_impl_generator.rs  param_impl_generator.rs  param_trait_impl_generator.rs  selected_default_impl_generator.rs  selected_trait_impl_generator.rs  template_arg_trait_impl_generator.rs  template_trait_impl_generator.rs
taitan-orm-parser/src/info_parser/: attr_parser.rs  condition_parser.rs  field_parser.rs  index_parser.rs  input_parser.rs  lifetime_parser.rs  mod.rs  option_parser.rs  parsed_field.rs  schema_parser.rs  table_def_extractor.rs  type_parser.rs
taitan-orm-parser/src/sql_generator/: field_group_list.rs  field_processor.rs  mod.rs
taitan-orm-parser/src/struct_generator/: entity_generator.rs  index_struct_generator.rs  location_enum_generator.rs  mod.rs  mutation_struct_generator.rs  order_by_struct_generator.rs  selected_struct_generator.rs
taitan-orm-parser/src/template_parser/: binary_op.rs  error.rs  expr.rs  mod.rs  number.rs  parsed_template_sql.rs  parser.rs  parser2.rs  placeholder.rs  rinja_template_parser.rs  segment.rs  simple_expr.rs  sql_part.rs  sql_template.rs  syntax_parser.rs  template_part.rs  text.rs  to_sql.rs  variable.rs
taitan-orm-parser/tests/: attr_parser_spec.rs  field_attr_parser_spec.rs  field_parser_spec.rs  lifetime_parser_spec.rs  mod.rs  runner.rs  table_def_spce.rs
taitan-orm-parser/tests/common/: expect_sql.rs  input_dataset.rs  input_spec.rs  mod.rs  named_input.rs  named_map.rs  sql_expects.rs  sql_spec.rs  table_def_generator.rs
taitan-orm-parser/tests/mapper/: condition_mapper_spec.rs  mark_mapper_spec.rs  mod.rs  name_mapper_spec.rs  set_mapper_spec.rs
taitan-orm-parser/tests/parser/: attr_parser_spec.rs  enum_parser_spec.rs  field_attr_parser_spec.rs  field_parser_spec.rs  mod.rs
taitan-orm-parser/tests/register/: inputs.rs  mod.rs
taitan-orm-parser/tests/runner/: mod.rs  runner.rs
taitan-orm-parser/tests/sql_spec/: insert_sql_spec.rs  mod.rs  upsert_sql_spec.rs
taitan-orm-parser/tests/template_parser/: arithmetic_spec.rs  expr_pair_spec.rs  mod.rs  placeholder_parse_spec.rs  prototype_spec.rs  rinja_spec.rs  sqlparser_spec.rs  syntax_parser_spec.rs  template_parser_spec_001.rs
taitan-orm-tracing/: Cargo.toml
taitan-orm-tracing/src/: lib.rs
taitan-orm-trait/: Cargo.toml  README.md  Roadmap.md
taitan-orm-trait/src/: error.rs  lib.rs  optional.rs  selected.rs  selected_entity.rs  selection.rs  template_record.rs
taitan-orm-trait/src/_old/: error.rs
taitan-orm-trait/src/brave_new/: count_sql_parser.rs  entity.rs  error.rs  location.rs  mod.rs  mutation.rs  paged_list.rs  pagination.rs  param.rs  placeholder.rs  result.rs  selected.rs  template.rs  template_record.rs  template_render.rs  unique.rs
taitan-orm-trait/src/location/: all_location.rs  cmp_operator.rs  conditions.rs  location.rs  location_expr.rs  mod.rs
taitan-orm-trait/src/logic/: location_and.rs  location_not.rs  (+2 more)
taitan-orm-trait/tests/: entity_trait_spec.rs  location_and_spec.rs  location_spec.rs  mutation_spec.rs  parser_spec.rs  selected_spec.rs
taitan-orm/src/: args_extractor.rs  count.rs  db.rs  error.rs  extractor.rs  lib.rs  result.rs  sql_api.rs  sql_executor.rs  sql_executor_mut.rs  sql_generator.rs  sql_generator_container.rs  sql_generic_executor.rs
taitan-orm/tests/: integration_tests.rs
taitan-orm/workspace/: test.db  test.db-shm  test.db-wal
(+426 files in other folders)
