[package]
name = "taitan-orm-macro"
edition = "2021"
version.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Next Generation ORM based on sqlx"
homepage = "https://github.com/thegenius/taitan-orm"


[lib]
proc-macro = true

[features]
tracing = ["taitan-orm-parser/tracing"]
sqlite = []
mysql = []
postgres = []


[dependencies]
quote = "1.0"
syn = { version = "2.0.90", features = ["full", "visit", "visit-mut"] }
#taitan-orm-parser = {path = "../taitan-orm-parser"}
taitan-orm-parser = {version = "0.1.11"}

[dev-dependencies]
sqlx = {workspace = true, features = ["sqlite"]}
