[package]
name = "taitan-orm-parser"
edition = "2021"
rust-version.workspace = true
version.workspace = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.90", features = ["full", "visit", "visit-mut"] }
proc-macro2 = "1.0"
case = "1.0"
darling = "0.20.10"
serde= { workspace = true, features = ["derive"] }
serde_json = {workspace = true}