[package]
name = "taitan-orm-parser"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Next Generation ORM based on sqlx"
rust-version.workspace = true
version.workspace = true


[dependencies]
quote = "1.0"
syn = { version = "2.0.99", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
case = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { version = "0.9.33" }
rinja = "0.3.5"
serde_json = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
sqlparser = "0.55.0"
regex = "1.11.1"

[dev-dependencies]
tracing-subscriber = { workspace = true }
sqlx = {workspace = true}
taitan-orm-trait = { path = "../taitan-orm-trait" }