[package]
name = "taitan-orm-tracing"
edition = "2021"
rust-version.workspace = true
version.workspace = true
license = "MIT OR Apache-2.0"
description = "Next Generation ORM based on sqlx"
homepage = "https://github.com/thegenius/taitan-orm"

[dependencies]
tracing = { workspace = true, optional = true }

