[package]
name = "taitan-orm-trait"
edition = "2021"
version.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Next Generation ORM based on sqlx"
homepage = "https://github.com/thegenius/taitan-orm"

[dependencies]
sqlx = {workspace = true}
serde = { version = "1.0.215", features = ["derive"] }
time = "0.3.37"
serde_with = {workspace = true}
serde_json = {workspace = true}
typetag = {workspace = true}
thiserror = {workspace = true}
nom = {workspace = true}
rinja = "0.3.5"
bit-vec ="0.8"
log = "0.4.22"