[package]
name = "axum_crud"
edition = "2021"
version = "0.1.2"
rust-version.workspace = true

[dependencies]
taitan-orm = {path = "../../taitan-orm", features = ["sqlite", "type-time"]}
#taitan-orm = {version = "0.1.6"}
axum = { version = "0.8.1" , features=["macros"]}
tokio = {version = "1.42.0", features = ["full"]}
sqlx = {version = "0.8.2", features = ["runtime-tokio", "mysql", "sqlite", "postgres", "bigdecimal", "time", "uuid"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

serde = {workspace = true}
serde_json = {workspace = true}