[package]
name = "crud"
edition = "2021"
version.workspace = true
rust-version.workspace = true

[dependencies]
taitan-orm = { path = "../../taitan-orm" }
sqlx = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}