[package]
name = "search"
edition = "2021"
rust-version.workspace = true
version.workspace = true

[dependencies]
taitan-orm = { path = "../../taitan-orm" }
#taitan-orm = {version = "0.1.6"}
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
