[package]
name = "template"
edition = "2021"
version = "0.1.2"
rust-version.workspace = true

[dependencies]
#taitan-orm = { path = "../../taitan-orm" }
taitan-orm = {version = "0.1.6"}
sqlx = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
