[package]
name = "template"
edition = "2021"
version = "0.1.2"
rust-version.workspace = true

[dependencies]
taitan-orm = { path = "../../taitan-orm", features = ["sqlite", "time"] }
#taitan-orm = {version = "0.1.6"}
sqlx = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
askama = "0.12.1"
tracing-subscriber = { workspace = true }
rinja = { workspace = true }
